client/css: dark mode contrast fixes (#388)
* client/css: fix dark mode pagination header bg

* client/css/post-main-view: dark uses box-shadow

* client/css: animate compact-tags updates

* client: tag input animations fixed

* client/css: darken darktheme success bg

* client/css: dark tag background colors

* client/css/tag-input-control: dark suggest header

* client/css: darktheme mobile site-name in nav

--- a/client/css/core-general.styl
+++ b/client/css/core-general.styl
@@ -240,6 +240,9 @@ nav
                 background: $focused-tab-background-color-darktheme
     &#top-navigation
         background: $top-navigation-color-darktheme
+        ul
+            #mobile-navigation-toggle
+                color: $text-color-darktheme
 
 a .access-key
     text-decoration: underline
@@ -275,7 +278,7 @@ a .access-key
             background: darken($message-error-background-color, 60%)
         &.success
             border: 1px solid darken($message-success-border-color, 30%)
-            background: darken($message-success-background-color, 60%)
+            background: darken($message-success-background-color, 80%)
 
 .thumbnail
     /*background-image: attr(data-src url)*/ /* not available yet */
