--- a/client/css/tag-input-control.styl
+++ b/client/css/tag-input-control.styl
@@ -86,6 +86,12 @@ div.tag-input
             font-size: 90%
             unselectable()
 
+@keyframes tag-added-to-post
+    from
+        max-height: 0
+    to
+        max-height: 5em
+
 ul.compact-tags
     width: 100%
     margin: 0.5em 0 0 0
@@ -103,17 +109,29 @@ ul.compact-tags
         a:focus
             outline: 0
             box-shadow: inset 0 0 0 2px $main-color
+        // these 3 added when tag is added to ul
+        &.added, &.new, &.implication
+            animation: tag-added-to-post 1s ease forwards
         &.implication
-            background: $implied-tag-background-color
             color: $implied-tag-text-color
+            background-color: $implied-tag-background-color
         &.new
-            background: $new-tag-background-color
             color: $new-tag-text-color
+            background-color: $new-tag-background-color
         &.duplicate
-            background: $duplicate-tag-background-color
             color: $duplicate-tag-text-color
+            background-color: $duplicate-tag-background-color
     i
         padding-right: 0.4em
+
+.darktheme ul.compact-tags
+    li
+        &.new
+            background-color: darken($new-tag-background-color, 80%)
+        &.implication
+            background-color: darken($implied-tag-background-color, 85%)
+        &.duplicate
+            background-color: darken($duplicate-tag-background-color, 80%)
 
 div.tag-input, ul.compact-tags
     .tag-usages, .tag-weight, .remove-tag
@@ -134,6 +152,8 @@ div.tag-input, ul.compact-tags
             background: $window-color-darktheme
             ul li:last-child
                 border-bottom: 0.5em solid alpha($window-color-darktheme, 0)
+            p
+                background: darken($tag-suggestions-header-color, 80%)
         .append
             color: $inactive-link-color-darktheme
     div.tag-input, ul.compact-tags
